--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <meta name="title" content="WorkAdventure Starter Kit">
-    <title>WorkAdventure test map</title>
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <title>Map test</title>
+
     <script>
         window.onload = function () {
             const host = window.location.host;
@@ -140,56 +140,33 @@
 <body>
     <div class="content">
         <header>
-            <div class="logo">
-                <a href="https://workadventu.re/" target="_blank" title="Workadventure">
-                    <img src="./images/logo.svg" alt="WorkAdventure logo" />
-                </a>
-            </div>
+            Nice! This map is live!
         </header>
         <main>
             <section>
-                <h2>Test my map</h2>
+                <h2>Test your map (in a sandbox): </h2>
                 <p><a id="testMapURL" href="#" class="url"></a></p>
-                <p class="tips">(In order to test another map, locate "office.tmj" at the end of the URL and replace it by another file name)</p>
-                <img src="./office.png" alt="Map thumbnail" class="map">
-                <p><a id="testMapBtnURL" href="#" class="button">Test my map</a></p>
+                <p><a id="testMapBtnURL" href="#" class="button">Try it out!</a></p>
+                <p class="title">Nice! This map is live. you can test it on a sandbox with the link above or using the button.</p>
+                
+                
+                <p class="tips">Tip: Open the link in a new tab to keep this page open.</p>
             </section>
 
             <section>
-                <h2>Publish my map</h2>
-                <p>Register your room on WorkAdventure!</p>
-                <p>Copy and paste the map URL in WorkAdventure's administration panel:</p>
+                <h2>How do I set this as my house in flavortown?</h2>
+                <p>Publish all code on GitHub, host this page with GitHub Pages</p>
+                <p>Copy and paste the below URL into the upload a map section on the flavortown navigation menu.</p>
                 <p><span id="tmjURL" class="url-box url"></span></p>
             </section>
 
             <section>
-                <h2>Connect and get help</h2>
+                <h2>Stuck? DM @euanripper on slack.</h2>
                 <div>
-                    <div class="socials">
-                        <a href="https://discord.gg/G6Xh9ZM9aR" target="_blank" title="discord">
-                            <img src="./images/discord.png" alt="discord">
-                        </a>
-                        <a href="https://github.com/thecodingmachine/workadventure" target="_blank" title="github">
-                            <img src="./images/github.png" alt="github">
-                        </a>
-                        <a href="https://www.youtube.com/channel/UCXJ9igV-kb9gw1ftR33y5tA" target="_blank" title="youtube">
-                            <img src="./images/youtube.png" alt="youtube">
-                        </a>
-                        <a href="https://twitter.com/Workadventure_" target="_blank" title="twitter">
-                            <img src="./images/twitter.png" alt="twitter">
-                        </a>
-                        <a href="https://www.instagram.com/workadventure_" target="_blank" title="instagram">
-                            <img src="./images/instagram.png" alt="instagram">
-                        </a>
-                        <a href="https://www.linkedin.com/company/workadventu-re" target="_blank" title="linkedin">
-                            <img src="./images/linkedin.png" alt="linkedin">
-                        </a>
-                    </div>
 
                     <div>
                         <a href="https://www.youtube.com/watch?v=lu1IZgBJJD4&list=PL7jmrMKZfjCnz36FvezxJ-Tshuh3Zz-nc&ab_channel=WorkAdventure"
                         target="_blank">Watch tutorials</a>
-                        <a href="https://discord.gg/G6Xh9ZM9aR" target="_blank">Talk to the community</a>
                     </div>
                 </div>
             </section>
